<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizza_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/title_background"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <TextView
        android:id="@+id/pizzaSizeTextView"
        android:background="@drawable/btn_bg"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="@+id/pizzaSizeSpinner"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/prompt_pizza_size"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitleView" />

    <Spinner
        android:id="@+id/pizzaSizeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@+id/pizzaSizeTextView"
        app:layout_constraintTop_toBottomOf="@+id/appTitleView" />


    <EditText
        android:id="@+id/editPizzaTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:hint="@string/prompt_total_pizzas"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaSizeTextView" />

    <Button
        android:id="@+id/calcbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:text="@string/btnText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaSizeTextView" />

    <TextView
        android:id="@+id/breadflourText"
        android:background="@drawable/btn_bg"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/bread_flour"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/plainflourText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPizzaTotal" />

    <TextView
        android:id="@+id/breadflourNumber"
        android:background="@drawable/btn_bg"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/plainflourNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPizzaTotal" />

    <TextView
        android:id="@+id/plainflourText"
        android:background="@drawable/btn_bg"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/plain_flour"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/seaSaltText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breadflourText" />

    <TextView
        android:id="@+id/plainflourNumber"
        android:background="@drawable/btn_bg"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/seaSaltNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breadflourNumber" />

    <TextView
        android:id="@+id/seaSaltText"
        android:background="@drawable/btn_bg"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sea_salt"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/yeastText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainflourText" />

    <TextView
        android:id="@+id/seaSaltNumber"
        android:background="@drawable/btn_bg"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/yeastNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plainflourNumber" />


    <TextView
        android:id="@+id/yeastText"
        android:background="@drawable/btn_bg"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/yeast"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/oilText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seaSaltText" />

    <TextView
        android:id="@+id/yeastNumber"
        android:background="@drawable/btn_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/oilNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seaSaltNumber" />

    <TextView
        android:id="@+id/oilText"
        android:background="@drawable/btn_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/olive_oil"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/waterText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yeastText" />

    <TextView
        android:id="@+id/oilNumber"
        android:background="@drawable/btn_bg"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/waterNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yeastNumber" />

    <TextView
        android:id="@+id/waterText"
        android:background="@drawable/btn_bg"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/water"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oilText" />

    <TextView
        android:id="@+id/waterNumber"
        android:background="@drawable/btn_bg"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oilNumber" />



</androidx.constraintlayout.widget.ConstraintLayout>

